reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__scheduler.rs_line_1744_col_9.log

*** crates/tracewake-core/src/scheduler.rs:1744:9: replace no_human::build_intention_started_event -> EventEnvelope with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/scheduler.rs
+++ replace no_human::build_intention_started_event -> EventEnvelope with Default::default()
@@ -1736,88 +1736,17 @@
         process_id: &ProcessId,
         actor_id: &ActorId,
         window: &DayWindow,
         proposal: &Proposal,
         content_manifest_id: &ContentManifestId,
         decision_trace_record: &DecisionTraceRecord,
         ordinary_event: &EventEnvelope,
     ) -> EventEnvelope {
-        let action = proposal.action_id.as_str();
-        let intention_id = IntentionId::new(format!(
-            "intention_{}_{}_{}",
-            actor_id.as_str(),
-            window.window_id,
-            action
-        ))
-        .unwrap();
-        let selected_goal_id = CandidateGoalId::new(format!(
-            "goal_{}_{}_{}",
-            actor_id.as_str(),
-            window.start_tick.value(),
-            action
-        ))
-        .unwrap();
-        let trace_id = decision_trace_record.trace_id.clone();
-        let mut event = EventEnvelope::new_caused_v1(
-            EventId::new(format!(
-                "event.intention_started.{}.{}",
-                actor_id.as_str(),
-                window.window_id
-            ))
-            .unwrap(),
-            EventKind::IntentionStarted,
-            0,
-            0,
-            window.start_tick,
-            OrderingKey::new(
-                window.start_tick,
-                SchedulePhase::NoHumanProcess,
-                SchedulerSourceId::Process(process_id.clone()),
-                ProposalSequence::new(0),
-                ActionId::new("intention_started").unwrap(),
-                vec![
-                    actor_id.as_str().to_string(),
-                    intention_id.as_str().to_string(),
-                ],
-                format!(
-                    "intention_started:{}:{}",
-                    actor_id.as_str(),
-                    window.window_id
-                ),
-            ),
-            content_manifest_id.clone(),
-            vec![EventCause::Event(ordinary_event.event_id.clone())],
-        )
-        .unwrap();
-        event.actor_id = Some(actor_id.clone());
-        event.process_id = Some(process_id.clone());
-        event.proposal_id = Some(proposal.proposal_id.clone());
-        event.participants = vec![actor_id.to_string(), intention_id.to_string()];
-        event.payload = vec![
-            PayloadField::new("actor_id", actor_id.as_str()),
-            PayloadField::new("intention_id", intention_id.as_str()),
-            PayloadField::new("status", "active"),
-            PayloadField::new(
-                "source",
-                IntentionSource::CandidateGoalSelection.stable_id(),
-            ),
-            PayloadField::new("selected_goal_id", selected_goal_id.as_str()),
-            PayloadField::new("selected_routine_method", ""),
-            PayloadField::new("current_step", action),
-            PayloadField::new("durability_level", "5"),
-            PayloadField::new("start_tick", window.start_tick.value().to_string()),
-            PayloadField::new("trace_id", trace_id.as_str()),
-            PayloadField::new("follow_on_action_id", proposal.action_id.as_str()),
-            PayloadField::new("follow_on_event_id", ordinary_event.event_id.as_str()),
-            PayloadField::new("window_id", window.window_id.as_str()),
-            PayloadField::new("reason", "no_human_selected_goal"),
-        ];
-        event.effects_summary = "no-human actor adopted a durable intention".to_string();
-        event
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     fn build_intention_continued_event(
         process_id: &ProcessId,
         active: &Intention,
         window: &DayWindow,
         proposal: &Proposal,
         content_manifest_id: &ContentManifestId,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/scheduler.rs` has changed (1781905365.599925537s, 4s after last build at 1781905361.587925597s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused import: `IntentionSource`
   --> crates/tracewake-core/src/scheduler.rs:232:41
    |
232 |         DecisionTraceRecord, Intention, IntentionSource, NeedKind, NeedState,
    |                                         ^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `CandidateGoalId` and `IntentionId`
   --> crates/tracewake-core/src/scheduler.rs:243:28
    |
243 |         ActionId, ActorId, CandidateGoalId, ContentManifestId, EventId, IntentionId, PlaceId,
    |                            ^^^^^^^^^^^^^^^                              ^^^^^^^^^^^

error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:1744:9
     |
1744 |         Default::default() /* ~ changed by cargo-mutants ~ */
     |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `EventEnvelope`
    --> crates/tracewake-core/src/events/envelope.rs:717:1
     |
 717 | pub struct EventEnvelope {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 2 warnings
error: could not compile `tracewake-core` (lib) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:1744:9
     |
1744 |         Default::default() /* ~ changed by cargo-mutants ~ */
     |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
    --> crates/tracewake-core/src/events/envelope.rs:717:1
     |
 717 | pub struct EventEnvelope {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

warning: `tracewake-core` (lib test) generated 2 warnings (2 duplicates)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
